# Reinforcement-Learning-based-Mobile-Robot-Navigation-using-TD3

./: README.md
launch/: multi_robot_scenario.launch.py  robot_state_publisher.launch.py
rlearning_docker/: Dockerfile  create_container.sh  open_terminal.sh  readme.md
scripts/: dqn_basic.py  my_script.py  replay_buffer.py
td3_pkg/: CMakeLists.txt  package.xml
td3_pkg/launch/: test_simulation.launch.py  training_simulation.launch.py
td3_pkg/scripts/: my_script_dqn.py  my_script_test.py
td3_pkg/worlds/: td3.world
